[package]
name = "move-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
once_cell = "1.21.3"
tempfile = "3.24.0"
regex = { version = "1.12.2", default-features = false, features = ["std", "perf"] }
datatest-stable = "0.3.3"
base64 = "0.22"
walkdir = "2"
getopts = "0.2"
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_bytes = "0.11"
hex = "0.4"
bcs = "0.1"
clap = "4.5"

schemars = {git = "https://github.com/starcoinorg/schemars", rev = "6972da92f4360e1779168bb3fe0274c521d324e2"}

move-binary-format = { git = "https://github.com/lispking/sui", branch = "feat/disable-stacker", features = ["wasm"] }
move-core-types = { git = "https://github.com/lispking/sui", branch = "feat/disable-stacker", default-features = false }
move-command-line-common = { git = "https://github.com/lispking/sui", branch = "feat/disable-stacker", default-features = false }
move-bytecode-source-map = { git = "https://github.com/lispking/sui", branch = "feat/disable-stacker", default-features = false }
move-ir-types = { git = "https://github.com/lispking/sui", branch = "feat/disable-stacker", default-features = false }
move-compiler = { git = "https://github.com/lispking/sui", branch = "feat/disable-stacker", default-features = false }
move-disassembler = { git = "https://github.com/lispking/sui", branch = "feat/disable-stacker", default-features = false }
starcoin-crypto = {git = "https://github.com/starcoinorg/starcoin-crypto", rev = "ada7f71f3585670106e356f82a8d817e8115b41b"}

[[bin]]
name = "move-web"
path = "src/main.rs"
